Attempt to fix right side team logo alignment

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -210,6 +210,7 @@ display: none;
 }
 
 .match_column_3 {
+  margin-right: 10px;
   float: right;
   width: 100px; 
   height: 100px; 
